[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Toucanoban.theme" type="Theme" id=1]
[ext_resource path="res://Font/CreatoDisplay-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/Options.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Options" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 320, 400 )
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 304.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
margin_top = 62.0
margin_right = 304.0
margin_bottom = 106.0
text = "Music Volume"
align = 1

[node name="SliderMusic" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 304.0
margin_bottom = 134.0
min_value = -10.0
max_value = 0.0
value = -3.0

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
margin_top = 138.0
margin_right = 304.0
margin_bottom = 182.0
text = "Sound Volume"
align = 1

[node name="SliderSFX" type="HSlider" parent="Panel/VBoxContainer"]
margin_top = 186.0
margin_right = 304.0
margin_bottom = 210.0
min_value = -10.0
max_value = 0.0
value = -3.0

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 214.0
margin_right = 304.0
margin_bottom = 354.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/CenterContainer"]
margin_left = 25.0
margin_right = 279.0
margin_bottom = 140.0
columns = 2

[node name="ButtonMute" type="CheckButton" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 64.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 68.0
margin_right = 254.0
margin_bottom = 44.0
text = "Mute Music"
align = 1

[node name="ButtonFullScreen" type="CheckButton" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 48.0
margin_right = 64.0
margin_bottom = 92.0

[node name="Label2" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 68.0
margin_top = 48.0
margin_right = 254.0
margin_bottom = 92.0
text = "Full Screen"
align = 1

[node name="ButtonDone" type="Button" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 96.0
margin_right = 64.0
margin_bottom = 140.0

[node name="Label3" type="Label" parent="Panel/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 68.0
margin_top = 96.0
margin_right = 254.0
margin_bottom = 140.0
text = "Done!"
align = 1

[connection signal="value_changed" from="Panel/VBoxContainer/SliderMusic" to="." method="_on_SliderMusic_value_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/SliderSFX" to="." method="_on_SliderSFX_value_changed"]
[connection signal="toggled" from="Panel/VBoxContainer/CenterContainer/GridContainer/ButtonMute" to="." method="_on_ButtonMute_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/CenterContainer/GridContainer/ButtonFullScreen" to="." method="_on_ButtonFullScreen_toggled"]
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/GridContainer/ButtonDone" to="." method="_on_ButtonDone_pressed"]
